Fixed error where scrollbar would  show next to some inline math expressions on html.

--- a/styles/style.css
+++ b/styles/style.css
@@ -42,6 +42,7 @@ mjx-container {
 
 mjx-container > * {
   overflow-x: auto;
+  overflow-y: hidden;
 }
 
 
